bindings/rust/wasmedge-sys/docs/wasmedge.rs

extern "C" {
    #[doc = " Retrieve the function index from the WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the WasmEdge_Value struct."]
    #[doc = ""]
    #[doc = " \\returns function index in the input struct."]
    pub fn WasmEdge_ValueGetFuncIdx(Val: WasmEdge_Value) -> u32;
}
extern "C" {
    #[doc = " Retrieve the external reference from the WASM value."]
    #[doc = ""]
    #[doc = " \\param Val the WasmEdge_Value struct."]
    #[doc = ""]
    #[doc = " \\returns external reference in the input struct."]
    pub fn WasmEdge_ValueGetExternRef(Val: WasmEdge_Value) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[doc = " Creation of the WasmEdge_String with the C string."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_StringDelete` to free"]
    #[doc = " it. This function only supports the C string with NULL termination. If the"]
    #[doc = " input string may have `\\0` character, please use the"]
    #[doc = " `WasmEdge_StringCreateByBuffer` instead."]
    #[doc = ""]
    #[doc = " \\param Str the NULL-terminated C string to copy into the WasmEdge_String"]
    #[doc = " object."]
    #[doc = ""]
    #[doc = " \\returns pointer to the context, NULL if failed."]
    pub fn WasmEdge_StringCreateByCString(Str: *const ::std::os::raw::c_char) -> WasmEdge_String;
}
extern "C" {
    #[doc = " Creation of the WasmEdge_String with the buffer and its length."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_StringDelete` to free"]
    #[doc = " it."]
    #[doc = ""]
    #[doc = " \\param Buf the buffer to copy into the WasmEdge_String object."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns pointer to the context, NULL if failed."]
    pub fn WasmEdge_StringCreateByBuffer(
        Buf: *const ::std::os::raw::c_char,
        Len: u32,
    ) -> WasmEdge_String;
}
extern "C" {
    #[doc = " Create the WasmEdge_String wraps to the buffer."]
    #[doc = ""]
    #[doc = " This function creates a `WasmEdge_String` object which wraps to the input"]
    #[doc = " buffer. The caller should guarantee the life cycle of the input buffer, and"]
    #[doc = " should __NOT__ call the `WasmEdge_StringDelete`."]
    #[doc = ""]
    #[doc = " \\param Buf the buffer to copy into the WasmEdge_String object."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns pointer to the context, NULL if failed."]
    pub fn WasmEdge_StringWrap(Buf: *const ::std::os::raw::c_char, Len: u32) -> WasmEdge_String;
}
extern "C" {
    #[doc = " Compare the two WasmEdge_String objects."]
    #[doc = ""]
    #[doc = " \\param Str1 the first WasmEdge_String object to compare."]
    #[doc = " \\param Str2 the second WasmEdge_String object to compare."]
    #[doc = ""]
    #[doc = " \\returns true if the content of two WasmEdge_String objects are the same,"]
    #[doc = " false if not."]
    pub fn WasmEdge_StringIsEqual(Str1: WasmEdge_String, Str2: WasmEdge_String) -> bool;
}
extern "C" {
    #[doc = " Copy the content of WasmEdge_String object to the buffer."]
    #[doc = ""]
    #[doc = " This function copy at most `Len` characters from the `WasmEdge_String`"]
    #[doc = " object to the destination buffer. If the string length is less than `Len`"]
    #[doc = " characters long, the remainder of the buffer is filled with `\\0' characters."]
    #[doc = " Otherwise, the destination is not terminated."]
    #[doc = ""]
    #[doc = " \\param Str the source WasmEdge_String object to copy."]
    #[doc = " \\param Buf the buffer to fill the string content."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns the copied length of string."]
    pub fn WasmEdge_StringCopy(
        Str: WasmEdge_String,
        Buf: *mut ::std::os::raw::c_char,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Deletion of the WasmEdge_String."]
    #[doc = ""]
    #[doc = " After calling this function, the resources in the WasmEdge_String object"]
    #[doc = " will be released and the object should __NOT__ be used."]
    #[doc = ""]
    #[doc = " \\param Str the WasmEdge_String object to delete."]
    pub fn WasmEdge_StringDelete(Str: WasmEdge_String);
}
extern "C" {
    #[doc = " Check the result is a success or not."]
    #[doc = ""]
    #[doc = " \\param Res the WasmEdge_Result struct."]
    #[doc = ""]
    #[doc = " \\returns true if the error code is WasmEdge_Result_Success or"]
    #[doc = " WasmEdge_Result_Terminate, false for others."]
    pub fn WasmEdge_ResultOK(Res: WasmEdge_Result) -> bool;
}
extern "C" {
    #[doc = " Get the result code."]
    #[doc = ""]
    #[doc = " \\param Res the WasmEdge_Result struct."]
    #[doc = ""]
    #[doc = " \\returns corresponding result code."]
    pub fn WasmEdge_ResultGetCode(Res: WasmEdge_Result) -> u32;
}
extern "C" {
    #[doc = " Get the result message."]
    #[doc = ""]
    #[doc = " The returned string must __NOT__ be freed."]
    #[doc = ""]
    #[doc = " \\param Res the WasmEdge_Result struct."]
    #[doc = ""]
    #[doc = " \\returns NULL-terminated C string of the corresponding error message."]
    pub fn WasmEdge_ResultGetMessage(Res: WasmEdge_Result) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Creation of the WasmEdge_ConfigureContext."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_ConfigureDelete` to"]
    #[doc = " free it."]
    #[doc = ""]
    #[doc = " \\returns pointer to the context, NULL if failed."]
    pub fn WasmEdge_ConfigureCreate() -> *mut WasmEdge_ConfigureContext;
}
extern "C" {
    #[doc = " Add a proposal setting into the WasmEdge_ConfigureContext."]
    #[doc = ""]
    #[doc = " For turning on a specific WASM proposal in WasmEdge_VMContext, you can set"]
    #[doc = " the proposal value into the WasmEdge_ConfigureContext and create VM with"]
    #[doc = " this context."]
    #[doc = " ```c"]
    #[doc = " WasmEdge_ConfigureContext *Conf = WasmEdge_ConfigureCreate();"]
    #[doc = " WasmEdge_ConfigureAddProposal(Conf, WasmEdge_Proposal_BulkMemoryOperations);"]
    #[doc = " WasmEdge_ConfigureAddProposal(Conf, WasmEdge_Proposal_ReferenceTypes);"]
    #[doc = " WasmEdge_ConfigureAddProposal(Conf, WasmEdge_Proposal_SIMD);"]
    #[doc = " WasmEdge_VMContext *VM = WasmEdge_VMCreate(Conf, NULL);"]
    #[doc = " ```"]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to add the proposal value."]
    #[doc = " \\param Prop the proposal value."]
    pub fn WasmEdge_ConfigureAddProposal(
        Cxt: *mut WasmEdge_ConfigureContext,
        Prop: WasmEdge_Proposal,
    );
}
extern "C" {
    #[doc = " Remove a proposal setting in the WasmEdge_ConfigureContext."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to remove the proposal."]
    #[doc = " \\param Prop the proposal value."]
    pub fn WasmEdge_ConfigureRemoveProposal(
        Cxt: *mut WasmEdge_ConfigureContext,
        Prop: WasmEdge_Proposal,
    );
}
extern "C" {
    #[doc = " Check if a proposal setting exists in the WasmEdge_ConfigureContext or not."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to check the proposal value."]
    #[doc = " \\param Prop the proposal value."]
    #[doc = ""]
    #[doc = " \\returns true if the proposal setting exists, false if not."]
    pub fn WasmEdge_ConfigureHasProposal(
        Cxt: *const WasmEdge_ConfigureContext,
        Prop: WasmEdge_Proposal,
    ) -> bool;
}
extern "C" {
    #[doc = " Add a host pre-registration setting into WasmEdge_ConfigureContext."]
    #[doc = ""]
    #[doc = " For turning on the Wasi support in `WasmEdge_VMContext`, you can set the"]
    #[doc = " host pre-registration value into the `WasmEdge_ConfigureContext` and create"]
    #[doc = " VM with this context."]
    #[doc = " ```c"]
    #[doc = " WasmEdge_ConfigureContext *Conf = WasmEdge_ConfigureCreate();"]
    #[doc = " WasmEdge_ConfigureAddHostRegistration(Conf, WasmEdge_HostRegistration_Wasi);"]
    #[doc = " WasmEdge_VMContext *VM = WasmEdge_VMCreate(Conf, NULL);"]
    #[doc = " ```"]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to add host pre-registration."]
    #[doc = " \\param Host the host pre-registration value."]
    pub fn WasmEdge_ConfigureAddHostRegistration(
        Cxt: *mut WasmEdge_ConfigureContext,
        Host: WasmEdge_HostRegistration,
    );
}
extern "C" {
    #[doc = " Remove a host pre-registration setting in the WasmEdge_ConfigureContext."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to remove the host"]
    #[doc = " pre-registration. \\param Host the host pre-registration value."]
    pub fn WasmEdge_ConfigureRemoveHostRegistration(
        Cxt: *mut WasmEdge_ConfigureContext,
        Host: WasmEdge_HostRegistration,
    );
}
extern "C" {
    #[doc = " Check if a host pre-registration setting exists in the"]
    #[doc = " WasmEdge_ConfigureContext or not."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to check the host pre-registration."]
    #[doc = " \\param Host the host pre-registration value."]
    #[doc = ""]
    #[doc = " \\returns true if the host pre-registration setting exists, false if not."]
    pub fn WasmEdge_ConfigureHasHostRegistration(
        Cxt: *const WasmEdge_ConfigureContext,
        Host: WasmEdge_HostRegistration,
    ) -> bool;
}
extern "C" {
    #[doc = " Set the page limit of memory instances."]
    #[doc = ""]
    #[doc = " Limit the page count (64KiB per page) in memory instances."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to set the maximum page count."]
    #[doc = " \\param Page the maximum page count."]
    pub fn WasmEdge_ConfigureSetMaxMemoryPage(Cxt: *mut WasmEdge_ConfigureContext, Page: u32);
}
extern "C" {
    #[doc = " Get the page limit of memory instances."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to get the maximum page count"]
    #[doc = " setting."]
    #[doc = ""]
    #[doc = " \\returns the page count limitation value."]
    pub fn WasmEdge_ConfigureGetMaxMemoryPage(Cxt: *const WasmEdge_ConfigureContext) -> u32;
}
extern "C" {
    #[doc = " Set the optimization level of AOT compiler."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to set the optimization level."]
    #[doc = " \\param Level the AOT compiler optimization level."]
    pub fn WasmEdge_ConfigureCompilerSetOptimizationLevel(
        Cxt: *mut WasmEdge_ConfigureContext,
        Level: WasmEdge_CompilerOptimizationLevel,
    );
}
extern "C" {
    #[doc = " Get the optimization level of AOT compiler."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to get the optimization level."]
    #[doc = ""]
    #[doc = " \\returns the AOT compiler optimization level."]
    pub fn WasmEdge_ConfigureCompilerGetOptimizationLevel(
        Cxt: *const WasmEdge_ConfigureContext,
    ) -> WasmEdge_CompilerOptimizationLevel;
}
extern "C" {
    #[doc = " Set the dump IR boolean value of AOT compiler."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to set the boolean value."]
    #[doc = " \\param IsDump the boolean value to determine to dump IR or not when"]
    #[doc = " compilation in AOT compiler."]
    pub fn WasmEdge_ConfigureCompilerSetDumpIR(Cxt: *mut WasmEdge_ConfigureContext, IsDump: bool);
}
extern "C" {
    #[doc = " Get the dump IR boolean value of AOT compiler."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_ConfigureContext to get the boolean value."]
    #[doc = ""]
    #[doc = " \\returns the boolean value to determine to dump IR or not when compilation"]
    #[doc = " in AOT compiler."]
    pub fn WasmEdge_ConfigureCompilerIsDumpIR(Cxt: *const WasmEdge_ConfigureContext) -> bool;
}
